<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutUserText">Description About Yourself Goes Here…</string>
    <string name="about_user_description_text">Description of you goes here..</string>
    <string name="about_user_text">About Username.</string>
    <string name="account_fragment_username">Username…</string>
    <string name="account_setting_button_text">Saving Account Settings?</string>
    <string name="account_setting_text">Settings</string>
    <string name="account_settings_user_image_description">User image changes go here</string>
    <string name="account_settings_user_name_text">Username…</string>
    <string name="action_logout_text">Logout</string>
    <string name="action_search_text">Search</string>
    <string name="add_item_to_album_text">Item</string>
    <string name="add_new_images_to_existing_album">Add More Images To Existing Album?</string>
    <string name="add_the_image_to_the_chosen_album">ADD A NEW IMAGE</string>
    <string name="album_description_text">Description.</string>
    <string name="album_name_title">Memories</string>
    <string name="app_label">label</string>
    <string name="app_name">Album</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="blog_post_comments_counter_text">0</string>
    <string name="bottom_account_text">Account</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="card_content_descriptor">card</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="comment_reply_description">Description of comment reply thumbnail</string>
    <string name="comment_text">Comment…</string>
    <string name="comment_thumb_up_likes_text">Likes</string>
    <string name="comments_clear_description">clear</string>
    <string name="comments_date_text">Date</string>
    <string name="comments_edit_text_description">Description</string>
    <string name="comments_space_hint_text">Comment here…</string>
    <string name="comments_title_text">Comments:</string>
    <string name="comments_username_text">username</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="create_a_new_album_button_text">Add Album</string>
    <string name="create_a_new_album_description_text">Add Description of The Album …</string>
    <string name="create_a_new_album_name_the_new_album_text">Name The New Album</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="default_web_client_id">792571229520-0f9qrbbs555v5vne1lvl6ubmgqke6esj.apps.googleusercontent.com</string>
    <string name="delete_album_description">Delete album</string>
    <string name="description_of_create_a_new_album">image</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_application_id">CHANGE-ME</string>
    <string name="facebook_login_protocol_scheme">fbYOUR_APP_ID</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://thealbumproject-38473.firebaseio.com</string>
    <string name="firebase_web_host">CHANGE-ME</string>
    <string name="folder_logo_description_text">This is the description of the folder logo</string>
    <string name="folder_text">Folder</string>
    <string name="fragment_layout_description_text">Description goes here.</string>
    <string name="fragment_layout_email_text">Email</string>
    <string name="fragment_layout_gravity">bottom|start</string>
    <string name="fragment_layout_username_text">Username</string>
    <string name="fui_accessibility_logo">App logo</string>
    <string name="fui_auto_verified">Phone number automatically verified</string>
    <string name="fui_button_text_save">Save</string>
    <string name="fui_button_text_send">Send</string>
    <string name="fui_cancel">Cancel</string>
    <string name="fui_confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="fui_continue">Continue</string>
    <string name="fui_default_toolbar_title">@string/app_name</string>
    <string name="fui_email_account_creation_error">Email account registration unsuccessful</string>
    <string name="fui_email_field_name">email_field</string>
    <string name="fui_email_hint">Email</string>
    <string name="fui_email_link_confirm_email_header">Confirm email</string>
    <string name="fui_email_link_confirm_email_message">Confirm email to continue sign in</string>
    <string name="fui_email_link_cross_device_linking_text">You originally intended to connect %1$s to your email account but have opened the link on a different device where you are not signed in.\10\10If you still want to connect your %1$s account, open the link on the same device where you started sign-in. Otherwise, tap Continue to sign-in on this device.</string>
    <string name="fui_email_link_cross_device_sign_in_button_text">Sign in with %1$s</string>
    <string name="fui_email_link_different_anonymous_user_header">Session ended</string>
    <string name="have_an_account_text">Have an Account Already?</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_email">Email…</string>
    <string name="login_password_hint_text">Password…</string>
    <string name="new_post_comment_description_text">desc</string>
    <string name="new_post_description">Description…</string>
    <string name="new_post_location_text">No Location To Display</string>
    <string name="new_post_location_thumbnail_description">Desc</string>
    <string name="new_post_recyclerview_date_text">Date</string>
    <string name="new_post_recyclerview_image_text">The description of the image in NewPostActivity goes here</string>
    <string name="new_post_recyclerview_like_text">0</string>
    <string name="new_post_recyclerview_likes_thumb_text">The description of the likes thumb goes here</string>
    <string name="new_post_recyclerview_user_image_text">The image of the user goes here</string>
    <string name="new_post_recyclerview_username_text">Username</string>
    <string name="post_clear_description">post clear</string>
    <string name="register_button">Create A New Account</string>
    <string name="register_button_text">NEED AN ACCOUNT?</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_create_an_account_in_album_description">This is the welcoming image for the register activity</string>
    <string name="register_email_text">Email…</string>
    <string name="register_password_text">Password…</string>
    <string name="thumb_up_image_description">Descritpiton of thumb up</string>
    <string name="welcome_image_of_login_page">Welcome image of login page</string>
</resources>