<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:id="@+id/cardView2" android:clipToPadding="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp" android:minWidth="0dp" android:minHeight="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.161">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/new_post_inner_constraint" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toTopOf="@+id/cardView2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <TextView android:textColor="@color/black" android:id="@+id/new_post_description" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/new_post_description" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/new_post_image" app:layout_constraintVertical_bias="0"/>
            <ImageView android:id="@+id/new_post_image" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="250dp" android:layout_marginTop="8dp" android:scaleType="center" android:contentDescription="@string/new_post_recyclerview_image_text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/new_post_user_image" app:srcCompat="@drawable/image_placeholder"/>
            <p017de.hdodenhof.circleimageview.CircleImageView android:id="@+id/new_post_user_image" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginTop="8dp" android:src="@drawable/baseline_account_circle_black_24dp" android:cropToPadding="true" android:contentDescription="@string/new_post_recyclerview_user_image_text" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/fui_transparent" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:baselineAligned="false" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/new_post_description" app:layout_constraintVertical_bias="0">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/likes_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                        <ImageView android:id="@+id/new_post_likes_thumb" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginTop="2dp" android:src="@drawable/baseline_favorite_border_black_24dp" android:contentDescription="@string/new_post_recyclerview_likes_thumb_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1"/>
                        <TextView android:textColor="@color/black" android:id="@+id/new_post_likes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_post_recyclerview_like_text" android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/new_post_likes_thumb" app:layout_constraintStart_toEndOf="@+id/new_post_likes_thumb" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@+id/location_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/comments_layout" app:layout_constraintStart_toEndOf="@+id/likes_layout" app:layout_constraintTop_toTopOf="0">
                        <ImageView android:id="@+id/new_post_location_thmbnail" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginTop="2dp" android:layout_weight="1" android:contentDescription="@string/new_post_location_thumbnail_description" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/location_text" app:layout_constraintStart_toEndOf="@+id/new_post_likes" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1" app:srcCompat="@drawable/baseline_location_on_black_24dp"/>
                        <TextView android:textColor="@color/black" android:id="@+id/location_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/new_post_location_text" android:scrollHorizontally="true" android:maxLength="30" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/new_post_comment" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/new_post_location_thmbnail" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/comments_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0">
                        <ImageView android:id="@+id/new_post_comment" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginTop="2dp" android:src="@drawable/baseline_add_comment_black_24dp" android:contentDescription="@string/new_post_comment_description_text" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/post_blog_comments_counter" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1"/>
                        <TextView android:textColor="@color/black" android:id="@+id/post_blog_comments_counter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blog_post_comments_counter_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
            <TextView android:textColor="@color/black" android:id="@+id/new_post_username_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_post_recyclerview_username_text" android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/new_post_date" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/new_post_user_image" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
            <TextView android:textColor="@color/black" android:id="@+id/new_post_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/new_post_recyclerview_date_text" android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/new_post_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/new_post_user_image" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1"/>
            <p017de.hdodenhof.circleimageview.CircleImageView android:id="@+id/post_clear" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginTop="16dp" android:src="@drawable/baseline_clear_white_24dp" android:contentDescription="@string/post_clear_description" android:layout_marginEnd="16dp" app:civ_circle_background_color="@color/pastel_color_violet1" app:layout_constraintBottom_toTopOf="@+id/new_post_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toEndOf="@+id/new_post_username_text" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
