<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/create_a_new_account_button" android:background="@color/pastel_violet" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/register_button" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/have_an_account_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.743"/>
    <Button android:id="@+id/have_an_account_button" android:background="@color/pastel_orange" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/have_an_account_text" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/register_create_a_new_account_in_album_image" app:layout_constraintVertical_bias="0.997"/>
    <EditText android:id="@+id/register_confirm_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/register_confirm_password" android:ems="10" android:inputType="textPassword" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/register_create_a_new_account_in_album_image" app:layout_constraintVertical_bias="0.565"/>
    <EditText android:id="@+id/register_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:hint="@string/register_email_text" android:ems="10" android:inputType="textEmailAddress" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.412"/>
    <EditText android:id="@+id/register_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="58dp" android:hint="@string/register_password_text" android:ems="10" android:inputType="textPassword" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/register_confirm_password" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/register_email" app:layout_constraintVertical_bias="0"/>
    <ImageView android:id="@+id/register_create_a_new_account_in_album_image" android:layout_width="200dp" android:layout_height="200dp" android:contentDescription="@string/register_create_an_account_in_album_description" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.507" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.08" app:srcCompat="@drawable/create_bigger"/>
    <ProgressBar android:id="@+id/register_progressbar" android:background="@color/pastel_violet" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:indeterminate="true" app:layout_constraintBottom_toTopOf="@+id/register_create_a_new_account_in_album_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" style="?android:attr/progressBarStyleHorizontal"/>
</androidx.constraintlayout.widget.ConstraintLayout>
