<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:id="@+id/comments_card_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/comments_constraint" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@+id/linear_layout_of_likes_and_replies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.022" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/comment" app:layout_constraintVertical_bias="0.087">
                <ImageView android:id="@+id/thumb_up" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/baseline_favorite_border_black_24dp" android:contentDescription="@string/thumb_up_image_description"/>
                <TextView android:textColor="@color/black" android:id="@+id/thumb_up_like_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_thumb_up_likes_text" android:layout_marginStart="8dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView android:textColor="@color/black" android:id="@+id/comment" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/comment_text" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/linear_layout_of_likes_and_replies" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.036" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/linear_layout_container1"/>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@+id/linear_layout_container1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                <p017de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="start" android:id="@+id/comments_user_image" android:layout_width="48dp" android:layout_height="48dp" android:layout_marginTop="0dp" android:src="@drawable/baseline_account_circle_black_36dp" android:layout_marginStart="0dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/inner_layout_for_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="8dp">
                    <TextView android:textColor="@color/black" android:id="@+id/comments_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/comments_username_text" android:layout_marginStart="0dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/circleImageView" app:layout_constraintTop_toTopOf="0"/>
                    <TextView android:textColor="@color/black" android:id="@+id/comments_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comments_date_text" android:layout_marginStart="0dp" app:layout_constraintStart_toEndOf="@+id/comments_user_image" app:layout_constraintTop_toBottomOf="@+id/comments_username"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <p017de.hdodenhof.circleimageview.CircleImageView android:id="@+id/comments_clear" android:background="@drawable/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_clear_white_24dp" android:contentDescription="@string/comments_clear_description" app:civ_circle_background_color="@color/pastel_color_violet1" app:layout_constraintBottom_toTopOf="@+id/comment" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.929" app:layout_constraintStart_toEndOf="@+id/linear_layout_container1" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.285"/>
            <ImageView android:id="@+id/comment_reply" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:contentDescription="@string/comment_reply_description" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/comment" app:srcCompat="@drawable/baseline_reply_black_24dp"/>
            <ImageView android:id="@+id/comments_edit" android:focusable="true" android:clickable="true" android:layout_width="16dp" android:layout_height="16dp" android:contentDescription="@string/comments_edit_text_description" app:layout_constraintBottom_toBottomOf="@+id/comment" app:layout_constraintEnd_toEndOf="@+id/comment" app:srcCompat="@drawable/sharp_edit_black_24dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
