<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/login_button" android:background="@color/pastel_orange" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/login_button_text" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/login_password" app:layout_constraintVertical_bias="0.025"/>
    <Button android:id="@+id/register_button" android:background="@color/pastel_violet" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/register_button_text" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/login_button" app:layout_constraintVertical_bias="1"/>
    <EditText android:id="@+id/login_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/login_email" android:ems="10" android:inputType="textEmailAddress" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/login_password" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/login_welcome_image"/>
    <EditText android:id="@+id/login_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/login_password_hint_text" android:ems="10" android:inputType="textPassword" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.526"/>
    <ImageView android:id="@+id/login_welcome_image" android:layout_width="200dp" android:layout_height="200dp" android:contentDescription="@string/welcome_image_of_login_page" app:layout_constraintBottom_toTopOf="@+id/login_password" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.365" app:srcCompat="@drawable/welcome_bigger"/>
    <androidx.core.widget.ContentLoadingProgressBar android:id="@+id/login_progressbar" android:background="@color/floating_bottom_color" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:indeterminate="true" app:layout_constraintBottom_toTopOf="@+id/login_welcome_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" style="@style/Widget.AppCompat.SeekBar.Discrete"/>
</androidx.constraintlayout.widget.ConstraintLayout>
